--- a/stylesheets/auth.css
+++ b/stylesheets/auth.css
@@ -11,14 +11,18 @@ h1 {
 }
 
 input {
-	background-color: var(--background_color);
-	border: 1px solid var(--background_color);
+	background-color: var(--secondary_color);
+	border: 1px solid var(--secondary_color);
     border-radius: 5px;
 	padding: 12px 15px;
 	margin: 8px 0;
 	width: 80%;
-	box-shadow: 1px 1px #0000003f;
-	color: var(--secondary_color);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 3px 2px rgba(0, 0, 0, 0.1);
+	color: var(--text);
+}
+
+::placeholder {
+	color: var(--text);
 }
 
 input:focus {
@@ -29,7 +33,7 @@ input:focus {
 
 	max-width: 100%;
 	max-height: 100%;
-	background-color: var(--primary_color);
+	background-color: var(--background_color);
 
 	position: fixed;
 	top: 50%;
@@ -37,6 +41,7 @@ input:focus {
 	transform: translate(-50%, -50%);
 	height: 70%;
 	width: 50%;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 3px 2px rgba(0, 0, 0, 0.1);
 	border-radius: 20px;
 }
 
@@ -61,14 +66,11 @@ input:focus {
 	align-items: center;
 	justify-content: center;
 }
-.container_sections_login {
-
-}
 
 .submit {
 	border-radius: 5px;
-	border: 1px solid var(--title);
-	background-color: var(--title);
+	border: 1px solid var(--primary_color);
+	background-color: var(--primary_color);
 	color: var(--text);
 	font-size: 12px;
 	font-weight: bold;
@@ -76,7 +78,7 @@ input:focus {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
-	box-shadow: 1px 1px #0000003f;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 3px 2px rgba(0, 0, 0, 0.1);
 }
 
 .submit:active {
@@ -92,6 +94,22 @@ input:focus {
 	border: 2px solid var(--title);
 	color: var(--title);
 	box-shadow: 1px 1px #0000003f;
+}
+
+.line-with-text {
+	display: flex;
+	align-items: center;
+	text-align: center;
+	width: 50%;
+	margin: 20px;
+	color: var(--text);
+}
+
+.line-with-text::before,
+.line-with-text::after {
+	content: '';
+	flex: 1;
+	border-bottom: 1px solid var(--text);
 }
 
 
