--- a/stylesheets/root.css
+++ b/stylesheets/root.css
@@ -1,6 +1,6 @@
 * {
 	box-sizing: border-box;
-    font-family: 'QuanSlim', 'Times New Roman', sans-serif;
+    font-family: 'Times New Roman', sans-serif;
 }
 
 :root {
@@ -12,31 +12,39 @@
 }
 
 @font-face {
-    font-family: 'QuanSlim';
-    src: url('./../fonts/QuanSlim-Regular.ttf') format('truetype');
+    font-family: 'Quan Slim';
+    src: url('./../fonts/QuanSlim-Regular.woff2') format('woff2'),
+        url('./../fonts/QuanSlim-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'QuanSlim';
-    src: url('./../fonts/QuanSlim-Italic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'QuanSlim';
-    src: url('./../fonts/QuanSlim-Bold.ttf') format('truetype');
+    font-family: 'Quan Slim';
+    src: url('./../fonts/QuanSlim-ExtraBold.woff2') format('woff2'),
+        url('./../fonts/QuanSlim-ExtraBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'QuanSlim';
-    src: url('./../fonts/QuanSlim-ExtraBold.ttf') format('truetype');
-    font-weight: 800;
+    font-family: 'Quan Slim';
+    src: url('./../fonts/QuanSlim-Italic.woff2') format('woff2'),
+        url('./../fonts/QuanSlim-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Quan Slim';
+    src: url('./../fonts/QuanSlim-Bold.woff2') format('woff2'),
+        url('./../fonts/QuanSlim-Bold.woff') format('woff');
+    font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 
