--- a/stylesheets/root.css
+++ b/stylesheets/root.css
@@ -1,6 +1,7 @@
 * {
 	box-sizing: border-box;
-    font-family: 'Times New Roman', sans-serif;
+    font-family: 'Quan Slim', sans-serif;
+    font-size: 20px;
 }
 
 :root {
