--- a/stylesheets/auth.css
+++ b/stylesheets/auth.css
@@ -6,8 +6,10 @@ body {
 }
 
 h1 {
-	color: rgb(75, 64, 240);
-	font-size: 100px;
+	color: var(--primary_color);
+	font-size: 60px;
+	font-weight: 800;
+	margin: 10px;
 }
 
 input {
@@ -39,8 +41,8 @@ input:focus {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	height: 70%;
-	width: 50%;
+	height: 85%;
+	width: 60%;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 3px 2px rgba(0, 0, 0, 0.1);
 	border-radius: 20px;
 }
@@ -67,6 +69,13 @@ input:focus {
 	justify-content: center;
 }
 
+.container_sections_login {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
 .submit {
 	border-radius: 5px;
 	border: 1px solid var(--primary_color);
@@ -79,6 +88,7 @@ input:focus {
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 3px 2px rgba(0, 0, 0, 0.1);
+	font-size: 20px;
 }
 
 .submit:active {
@@ -112,7 +122,17 @@ input:focus {
 	border-bottom: 1px solid var(--text);
 }
 
+.title {
+	font-size: 50px;
+	font-weight: 600;
+	color: var(--text);
+}
 
+.highlight {
+	font-size: 50px;
+	font-weight: 600;
+	color: var(--primary_color);
+}
 
 @media (max-width: 768px) {
 	.container {
