--- a/stylesheets/auth.css
+++ b/stylesheets/auth.css
@@ -138,6 +138,8 @@ input:focus {
 	display: flex;
 	flex-direction: row;
 	width: 100%;
+	justify-content: center;
+	align-items: center;
 }
 
 @media (max-width: 768px) {
